--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ html {
     font-size: 22px;
 }
 
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: justify;
+}
+    
+
 body {
     min-height: 100vh;
     max-width: 800px;
@@ -11,9 +18,14 @@ body {
     border-right: 2px solid #333; 
 }
 
-/* th, td, caption {
+h2,h3 {
+    color: #0066cc;
+
+}
+
+th, td, caption {
     border: 1px solid #333;
     font-family: 'Courier New', Courier, monospace;
     border-collapse: separate;
     padding: 0.5rem;
-} */
+}
