--- a/style.css
+++ b/style.css
@@ -29,3 +29,38 @@ th, td, caption {
     border-collapse: separate;
     padding: 0.5rem;
 }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+}
+
+form {
+    margin: auto;
+}
+
+label {
+    display: contents;
+    margin: auto;
+}
+
+input,textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #0066cc;
+    color: #fff;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+button :hover {
+    background-color: #db0707;
+}
