--- a/style.css
+++ b/style.css
@@ -1,66 +1,16 @@
-html {
-    font-size: 22px;
-}
+:root {
+    --primary-color: #0066cc;
+    --accent-color: #db0707;
+    --background-color: #f0f0f0;
+    --text-color: #333;
+}   
 
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: justify;
+html {
+    font-size: 18px;
 }
-    
 
 body {
-    min-height: 100vh;
-    max-width: 800px;
-    margin: auto;
-    padding: 1rem;
-    border-left: 2px solid #333;
-    border-right: 2px solid #333; 
-}
-
-h2,h3 {
-    color: #0066cc;
-
-}
-
-th, td, caption {
-    border: 1px solid #333;
-    font-family: 'Courier New', Courier, monospace;
-    border-collapse: separate;
-    padding: 0.5rem;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-}
-
-form {
-    margin: auto;
-}
-
-label {
-    display: contents;
-    margin: auto;
-}
-
-input,textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-}
-
-button {
-    background-color: #0066cc;
-    color: #fff;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-right: 20px;
-}
-
-button :hover {
-    background-color: #db0707;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
 }
