--- a/style.css
+++ b/style.css
@@ -87,3 +87,15 @@ input, textarea {
     margin-bottom: 10px;
     box-sizing: border-box;
 }
+
+button {
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+button :hover {
+    background-color: var(--accent-color);
+}
