--- a/style.css
+++ b/style.css
@@ -99,3 +99,33 @@ button {
 button :hover {
     background-color: var(--accent-color);
 }
+
+/* @media only screen and (max-width: 600px) {
+    body {
+        max-width: 100%;
+        padding: 0.5rem;
+        border: none;
+    }
+
+    header,
+    footer {
+        padding: 10px;
+    }
+
+    nav ul {
+        text-align: center;
+    }
+
+    nav li {
+        display: block;
+        margin: 5px 0;
+    }
+
+    figure {
+        margin-top: 10px;
+    }
+
+    main {
+        padding: 10px;
+    }
+} */
