--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ button :hover {
     background-color: var(--accent-color);
 }
 
-/* @media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     body {
         max-width: 100%;
         padding: 0.5rem;
@@ -128,4 +128,4 @@ button :hover {
     main {
         padding: 10px;
     }
-} */
+}
